---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2020-07-27
  Features:
    - Enabling "use internal names" will change search to use internal names as well
  Changes:
    - Renamed "show internal names" to "use internal names" and moved to search settings
  Bugfixes:
    - Fixed a desync related to player.connnected being unreliable during on_configuration_changed in multiplayer
    - Fixed a potential crash if a GUI handler was removed between versions
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2020-07-25
  Bugfixes:
    - Fixed that the search history would not be purged on configuration change, leading to crashes with non-existent items
    - Reverted the session history "fix" from v2.0.2 that was actually being caused by the above issue, and didn't actually fix anything
    - Fixed a crash with the listbox item clicked regex when an item name has brackets in it
    - Fixed a crash when attempting to get a machine blueprint for a crafter that had the "non-blueprintable" flag set
    - Fixed that temporary machine blueprints of machines with a side that was an even number of tiles would be placed one tile off from where the preview was
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2020-07-25
  Features:
    - Clicking a machine on the recipe screen will give you a blueprint of that machine with the recipe set
    - Right-clicking the search textfield will clear it
  Bugfixes:
    - Fixed that the session history would sometimes get a duplicated home entry, causing a crash when trying to format the back button
---------------------------------------------------------------------------------------------------