@@ -2,6 +2,9 @@
 Version: 2.0.5
 Date: ????
   Changes:
+    - All recipe ingredients and products will always be shown despite object visibility settings
+  Bugfixes:
+    - Fixed a crash when opening a quick reference panel for a hidden recipe, when show hidden objects is turned off
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.4
 Date: 2020-07-27
